# bcg_2021

./: .gitignore  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: DCircle.h  DLine.h  DRect.h  DShape.h  Menu.h  Program.h  pch.h
lab1/src/: Menu.cpp  Program.cpp
lab2/: main.cpp
lab2/include/: DCircle.h  Panel.h
lab2/src/: DCircle.cpp  Panel.cpp
lab3/: main.cpp
lab3/include/: MyApp.h  MyFrame.h
lab3/src/: MyFrame.cpp
lab4/: wxFB.fbp
lab4/include/: ChartClass.h  GUI.h
lab4/src/: ChartClass.cpp  ConfigClass.cpp  GUI.cpp  GUIMyFrame1.cpp
lab5/include/: GUI.h
lab5/src/: GUIMyFrame1.cpp
lab6/include/: GUI.h
lab6/src/: GUIMyFrame1.cpp
lab7/include/: GUI.h
lab7/src/: draw_map.cpp
lab8/: main.cpp
lab8/include/: CImg.h  FreeImage.h  GUI.h  MyFrame.h
lab8/src/: GUI.cpp  MyFrame.cpp
